issue #1 fix increase z-index of dialog to make it show in front of dabs.ie page menu

--- a/style/pcbuilderui.css
+++ b/style/pcbuilderui.css
@@ -87,7 +87,7 @@
     top: 20%;
     box-shadow: 0px 0px 102px 19px rgba(100, 180, 220, 0.9);
     border-radius: 8px;
-    z-index: 999;
+    z-index: 100000;
     -webkit-user-select: text;
     text-align: center;
 }
